@@ -1,5 +1,11 @@
 2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 2033721:
+    * source/org/jfree/chart/renderer/WaferMapRenderer.java
+    (getLegendCollection): Use lookupSeriesPaint.
+
+2008-08-15  David Gilbert  <david.gilbert@object-refinery.com>
+
     Bug 2051168:
     * source/org/jfree/chart/plot/PiePlot.java
     (getLegendItems): Populate with series key and index.
